# GPTRemover

./: .gitignore  README.md  pyproject.toml
src/: bookmarklet_exporter.bookmarklet.txt  bookmarklet_exporter.js
src/chatgpt_migrator/: bookmarklet.py  cli.py  core.py
tests/: test_bookmarklet.py  test_migrator.py
