[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatgpt-migrator"
version = "0.1.0"
description = "Export-based ChatGPT conversation migration helper for Plus users."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
chatgpt-migrator = "chatgpt_migrator.cli:main"
